--- a/src/aquresque/GudangPage.form
+++ b/src/aquresque/GudangPage.form
@@ -209,7 +209,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="tbl_dataGdg">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                   <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;KODE BRG&quot;, &quot;JENIS BRG&quot;, &quot;NAMA BRG&quot;, &quot;JUMLAH&quot;, &quot;SATUAN&quot;&#xa;    }&#xa;)" type="code"/>
