[+] Fix GudangPage [+] Add Edit Barang, Hapus Barang (all with KODE BRG) [+]Fixxed DatabaseController [+] etc.

--- a/src/aquresque/GudangPage.form
+++ b/src/aquresque/GudangPage.form
@@ -35,6 +35,8 @@
                   <Component id="btn_tambahBrg" alignment="0" min="-2" pref="231" max="-2" attributes="0"/>
                   <Component id="btn_editBrg" alignment="0" min="-2" pref="231" max="-2" attributes="0"/>
                   <Component id="btn_hapusBrg" alignment="0" min="-2" pref="231" max="-2" attributes="0"/>
+                  <Component id="btn_refreshTable" alignment="0" min="-2" pref="231" max="-2" attributes="0"/>
+                  <Component id="btn_kembaliMain" alignment="0" min="-2" pref="87" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="78" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -69,6 +71,10 @@
                       <Component id="btn_editBrg" min="-2" pref="30" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="btn_hapusBrg" min="-2" pref="30" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="btn_refreshTable" min="-2" pref="30" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="btn_kembaliMain" min="-2" pref="30" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -223,5 +229,33 @@
         </Container>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="btn_refreshTable">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="ff" red="cc" type="rgb"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="REFRESH BARANG"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_refreshTableActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btn_kembaliMain">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="33" red="33" type="rgb"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="KEMBALI"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_kembaliMainActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
